--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ input, select, textarea, button {
   -ms-user-select: none;
   user-select: none;
   background-color: transparent;
+  cursor: pointer;
   transition: 0.5s;
 }
 
