--- a/music/styles.css
+++ b/music/styles.css
@@ -85,6 +85,7 @@ a:active {
   -ms-user-select: none;
   user-select: none;
   background-color: transparent;
+  cursor: pointer;
   transition: 0.5s;
 }
 
