--- a/music/styles.css
+++ b/music/styles.css
@@ -77,17 +77,23 @@ a:active {
 }
 
 #user-container {
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 50px;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: transparent;
+  background-color: black;
+  color: white;
   transition: 0.5s;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 #user-container:hover {
-  background-color: purple;
+  background-color: white;
+  color: black;
 }
 
 #controlPanel {
