--- a/public/new/styles.styl
+++ b/public/new/styles.styl
@@ -101,7 +101,7 @@ fullscreen()
 }
 
 body
-  font-family: huninn, sans-serif
+  font-family: huninn, sans-serif, arial
   overflow-y: hidden
 
 input::-webkit-outer-spin-button,
